--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/style/main.css">
-    <title>client</title>
+    <title>Squad Up</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-dark navbar-expand bg-dark text-light">
             <a class="navbar-brand" href="#">
                 <img src="assets/img/logo.png" width="45" height="45" alt="" loading="lazy">
-                <span class="ml-2">client</span>
+                <span class="ml-2">Squad Up</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,30 +28,64 @@
         </nav>
     </header>
     <main class="container-fluid">
-        <div class="row my-3">
-            <div class="col-5">
-                <div class="card p-2 skeleton-loader">
-                    <div class="card-title p-2">
-                        <div class="d-flex align-items-center">
-                            <div class="skeleton-loader avatar"></div>
-                            <div class="skeleton-loader text mx-2"></div>
+        <div class="row justify-content-between">
+            <div class="col-2 card profile-height overflow-auto">
+                <img src="https://i.stack.imgur.com/l60Hf.png">
+                <h6>Profile Name</h6>
+                <h6>Rank Name</h6>
+                <h6>Gamer Tag</h6>
+            </div>
+
+            <div class="col-4 card mt-4">
+                <div class="row">
+                    <div class="col-6 mt-4"><img width="290" src="https://pngimg.com/uploads/call_of_duty/call_of_duty_PNG24.png" alt=""></div>
+                    <div class="col-6">
+                        <div class="row ml-5">
+                            <div class="col-12 mt-3"><h3>Game Title</h3></div>
+                            <div class="col-12 mt-3 game-column-height"><h6>Game Description</h6></div>
+                            <div class="col-4 mt-3"><button class="btn btn-success">Add</button></div>
+                            <div class="col-4 mt-3"><button class="btn btn-success">View</button></div>
                         </div>
                     </div>
-                    <div class="card-body border-top">
-                        <div class="skeleton-loader text block"></div>
-                        <div class="skeleton-loader text block"></div>
-                        <div class="skeleton-loader text"></div>
-                    </div>
                 </div>
+                </div>
+            <div class="col-4 card post-height mt-4 mr-4">
+                <h1>Post Area</h1>
+                <h5 class="m-2">
+                <div class="form-check form-check-inline">
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" name="" id="" value="checkedValue"> Display value
+                    </label>
+                </div>
+                </h5>
+                <h5 class="m-2">
+                    <div class="form-check form-check-inline">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox" name="" id="" value="checkedValue"> Display value
+                        </label>
+                    </div>
+                    </h5>
+                    <h5 class="m-2">
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox" name="" id="" value="checkedValue"> Display value
+                            </label>
+                        </div>
+                        </h5>
+                        <form class="form-inline m-3">
+                            <div class="form-group">
+                                <label for=""></label>
+                                <input type="text" name="" id="" class="form-control" placeholder="" aria-describedby="helpId">
+                                <button class="btn btn-success ml-2">Add Comment</button>
+                            </div>
+                        </form>
+                        <div class="row">
+                            <div class="col-12 card bg-dark text-light p-3 shadow-lg">Hey</div>
+                        </div>
             </div>
         </div>
     </main>
     <footer class="container-fluid bg-dark text-light">
-        <div class="row text-center">
-            <div class="col">
-                <p><small>Made with love by Codeworks</small></p>
-            </div>
-        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
